[package]
name = "rocket-jwt"
version = "0.5.3"
edition = "2021"
authors = ["Yaxian <yaxian.gu@gmail.com>"]
repository = "https://github.com/Yaxian/rocket-jwt"
readme = "./README.md"
license = "MIT"
keywords = ["rocket", "authorization", "jwt", "jswonwebtoken"]
categories = ["parser-implementations", "web-programming"]
description = "jwt authorization for rocket"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
jsonwebtoken = "9.3.0"
syn = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }


[dev-dependencies]
rocket = { git = "https://github.com/rwf2/Rocket", rev = "3bf9ef0", features = ["json"] }
trybuild = "1.0"

[build-dependencies]
version_check = "0.9"
yansi = "0.5"

[[example]]
name = "rocket-jwt-demo"
path = "examples/rocket-jwt-demo/src/main.rs"